a1/brendan_gordon/TEST_PROGRAMS/invalidtype/frederic_lafrance/2.min
# Can't assign float to int (expression extends to float).

var x: int;
var y: float;

x = x + y;
